Hadoop MapReduce Change Log

Trunk (Unreleased)

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-778. Rumen Anonymizer. (Amar Kamat and Chris Douglas via amarrk)

    MAPREDUCE-2669. Add new examples for Mean, Median, and Standard Deviation.
    (Plamen Jeliazkov via shv)

  IMPROVEMENTS

    MAPREDUCE-3787. [Gridmix] Optimize job monitoring and STRESS mode for
                    faster job submission. (amarrk)

    MAPREDUCE-3481. [Gridmix] Improve Gridmix STRESS mode. (amarrk)

    MAPREDUCE-3597. [Rumen] Rumen should provide APIs to access all the
                    job-history related information.

    MAPREDUCE-3375. [Gridmix] Memory Emulation system tests.
                    (Vinay Thota via amarrk)

    MAPREDUCE-2733. [Gridmix] Gridmix3 cpu emulation system tests.
                    (Vinay Thota via amarrk)

    MAPREDUCE-3008. Improvements to cumulative CPU emulation for short running
                    tasks in Gridmix. (amarrk)

    MAPREDUCE-2836. Provide option to fail jobs when submitted to non-existent
    fair scheduler pools. (Ahmed Radwan via todd)

    MAPREDUCE-3171. normalize nodemanager native code compilation with common/hdfs
    native. (tucu)

    MAPREDUCE-3149. Add a test to verify that TokenCache handles file system
    uri with no authority. (John George via jitendra)

    MAPREDUCE-3169. Create a new MiniMRCluster equivalent which only provides
    client APIs cross MR1 and MR2 (Ahmed via tucu)

    MAPREDUCE-2944. Improve checking of input for JobClient.displayTasks()
    (XieXianshan via harsh)

    MAPREDUCE-3956. Remove the use of the deprecated Syncable.sync() method from
    TeraOutputFormat in the terasort example.  (szetszwo)

    MAPREDUCE-3935. Annotate Counters.Counter and Counters.Group as @Public.
    (tomwhite)

    HADOOP-8285 MR changes for Use ProtoBuf for RpcPayLoadHeader (sanjay radia)

    MAPREDUCE-3302. Remove the last dependency call from
    org.apache.hadoop.record package in MR. (harsh)
